GitOps/apps/base/my-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
spec:
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
        - name: my-website
          image: my-website:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
          #     memory: "512Mi"
          # envFrom:
          #   - secretRef:
          #       name: db-credentials
