GitOps/apps/base/my-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website
spec:
  selector:
    app: my-website
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
